practica_3/jcc_files/adac_4.java
/* adac_4.java */
/* Generated By:JavaCC: Do not edit this line. adac_4.java */
package traductor;
import lib.attributes.Attributes;
import lib.symbolTable.*;
import lib.symbolTable.exceptions.*;
import lib.symbolTable.Symbol.ParameterClass;
import lib.symbolTable.Symbol.Types;
import lib.tools.SemanticFunctions;
import lib.tools.SemanticFunctions.Operator;
import lib.tools.exceptions.*;
import java.util.ArrayList;

public class adac_4 implements adac_4Constants {

        //Se declara la tabla de simbolos
        static SymbolTable st;
        static SemanticFunctions sf;

        static int synt_errors = 0;

        //Funcion que a lo mejor hay que cambiar
        private static void initSymbolTable() {
                boolean b;
                String[] palsRes = {
                "var","const","escribir"
                };

                st.insertReservedWords(palsRes);
        }

        public static void panicMode(Token err, int type) {
                synt_errors++;
                System.err.println("ERROR SINTACTICO: (" + err.beginLine + ","
                        + err.beginColumn + "): " + err);
                System.err.println("----> Iniciando recuperacion en modo panico..."
                        + "\n----> Saltando todo hasta token de conjunto de sincronizacion");
                Token t = getNextToken();
                if (type == 0) {
                        while(t.kind != EOF) {
                                System.err.println("Descartando token ("
                                        + adac_4Constants.tokenImage[t.kind] + "," + t.image + ")");
                                t = getNextToken();
                        }
                } else {
                        while(t.kind != SCOLON && t.kind != END && t.kind != EOF) {
                                System.err.println("Descartando token ("
                                        + adac_4Constants.tokenImage[t.kind] + "," + t.image + ")");
                                t = getNextToken();
                        }
                }
        }


    public static void main(String[] args) throws java.io.FileNotFoundException,
                        ParseException
        {
        adac_4 parser;

        try {
                        //Se iniciar y crea la tabla de simbolos pero esta vacia
                        st = new SymbolTable();
                initSymbolTable();
                        sf = new SemanticFunctions(st);

                        // Entrada desde stdin.
                if(args.length == 0) {
                                parser = new adac_4(System.in);
                        }
                        // Entrada desde fichero en args[0].
                        else {
                    parser = new adac_4(new java.io.FileInputStream(args[0]));
                        }
                        // Invoca símbolo inicial de la gramática.
                        parser.main();
                        if ((synt_errors + sf.getErrors()) == 0) System.out.println("Compilation succeded.");
                        else {
                                System.out.println("\nCompilation failed due to errors: "
                                        + synt_errors + " syntatic error(s), "
                                        + sf.getWarnings() + " warning(s), "
                                        + sf.getErrors() + " error(s).");
                        }
                } catch (java.io.FileNotFoundException e) {
                        System.err.println ("Fichero " + args[0] + " no encontrado.");
                } catch (TokenMgrError e) {
                System.err.println("LEX_ERROR: " + e.getMessage());
        }
    }

//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
// ANALIZADOR SINTATICO & SEMANTICO.
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
// Declaracion del procedimiento principal del fichero.
  static final public void main() throws ParseException {Attributes main = new Attributes(Types.PROCEDURE, Types.UNDEFINED, null, true);
        Token t;
    try {
      jj_consume_token(PROC);
      t = jj_consume_token(ID);
sf.AddMethod(main, t);
      jj_consume_token(IS);
      vars_def();
      procs_funcs_decl();
      proc_func_body(main);
      jj_consume_token(0);
    } catch (ParseException e) {
panicMode(e.currentToken.next, 0);
    }
}

//-----------------------------------------------------------------------------
// Declaracion de procedimientos/funciones del fichero.
  static final public void procs_funcs_decl() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:
      case PROC:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      proc_func_decl();
    }
}

//-----------------------------------------------------------------------------
// Declaracion de procedimiento/funcion
  static final public void proc_func_decl() throws ParseException {Attributes at = new Attributes();
        Token t;
    proc_or_func(at);
    func_return(at);
    t = jj_consume_token(ID);
sf.EvaluateReturnTypeDef(at, t); sf.AddMethod(at, t);
    jj_consume_token(LPAREN);
    params_def(at.params);
    jj_consume_token(RPAREN);
    jj_consume_token(IS);
    vars_def();
    procs_funcs_decl();
    proc_func_body(at);
}

//-----------------------------------------------------------------------------
// Declaracion de si es procedimiento o funcion.
  static final public void proc_or_func(Attributes at) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PROC:{
      jj_consume_token(PROC);
at.type = Types.PROCEDURE;
      break;
      }
    case FUNC:{
      jj_consume_token(FUNC);
at.type = Types.FUNCTION;
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

//-----------------------------------------------------------------------------
// Tipo de dato que devuelve la funcion.
  static final public void func_return(Attributes at) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOL:
    case CHAR:{
      vars_type(at);
      break;
      }
    default:
      jj_la1[2] = jj_gen;

at.baseType = Types.UNDEFINED;
    }
}

//-----------------------------------------------------------------------------
// Parametros de procedimiento/funcion.
  static final public void params_def(ArrayList<Symbol> params) throws ParseException {Attributes at = new Attributes(params);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAL:
    case REF:{
      param_class(at);
      vars_decl(at);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SCOLON:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(SCOLON);
        param_class(at);
        vars_decl(at);
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
}

//-----------------------------------------------------------------------------
// Clase del parametro: por valor o por referencia.
  static final public void param_class(Attributes at) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAL:{
      jj_consume_token(VAL);
at.parClass = ParameterClass.VAL;
      break;
      }
    case REF:{
      jj_consume_token(REF);
at.parClass = ParameterClass.REF;
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

//-----------------------------------------------------------------------------
// Variables de procedimiento/funcion.
  static final public void vars_def() throws ParseException {Attributes at = new Attributes(ParameterClass.NONE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOL:
      case CHAR:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      vars_decl(at);
      jj_consume_token(SCOLON);
    }
}

//-----------------------------------------------------------------------------
// Tipos de variable y variables asociadas.
  static final public void vars_decl(Attributes at) throws ParseException {
    vars_type(at);
    vars_list(at);
}

//-----------------------------------------------------------------------------
// Tipos de una variable.
  static final public void vars_type(Attributes at) throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      t = jj_consume_token(INT);
at.baseType = Types.INT; at.line = t.beginLine; at.column = t.beginColumn;
      break;
      }
    case BOOL:{
      t = jj_consume_token(BOOL);
at.baseType = Types.BOOL; at.line = t.beginLine; at.column = t.beginColumn;
      break;
      }
    case CHAR:{
      t = jj_consume_token(CHAR);
at.baseType = Types.CHAR; at.line = t.beginLine; at.column = t.beginColumn;
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

//-----------------------------------------------------------------------------
// Variables del mismo tipo.
  static final public void vars_list(Attributes at) throws ParseException {
    var(at);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COLON:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(COLON);
      var(at);
    }
}

//-----------------------------------------------------------------------------
// Nombre de la variable.
  static final public void var(Attributes at) throws ParseException {Token t, ind;
    if (jj_2_1(2)) {
      t = jj_consume_token(ID);
      jj_consume_token(LBRACK);
      ind = jj_consume_token(INTVAL);
      jj_consume_token(RBRACK);
sf.AddVar(at, t, ind, Types.ARRAY);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        t = jj_consume_token(ID);
sf.AddVar(at, t, null, Types.UNDEFINED);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

//-----------------------------------------------------------------------------
// Cuerpo de procedimiento/funcion.
  static final public void proc_func_body(Attributes at) throws ParseException {Token t;
    try {
      jj_consume_token(BEGIN);
      instructions_list(at);
      t = jj_consume_token(END);
sf.EvaluateReturn(at, t); st.removeBlock();
    } catch (ParseException e) {
panicMode(e.currentToken.next, 1);
    }
}

//-----------------------------------------------------------------------------
// Conjunto de instrucciones.
  static final public void instructions_list(Attributes at) throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RETURN:
      case PUT:
      case PUTLINE:
      case SKIPLINE:
      case GET:
      case IF:
      case WHILE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      instruction(at);
    }
}

//-----------------------------------------------------------------------------
// Instruccion:
//	- Procedimientos predefinidos: get, put, putline, skipline.
//  - Procedimientos del usuario.
//	- Asignacion.
//	- While/If-Else.
//	- Return.
  static final public void instruction(Attributes at) throws ParseException {Attributes fst = new Attributes(), snd = new Attributes();
        Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GET:{
      jj_consume_token(GET);
      jj_consume_token(LPAREN);
      assignable(fst);
sf.EvaluateGet(fst);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COLON:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_6;
        }
        jj_consume_token(COLON);
        assignable(fst);
sf.EvaluateGet(fst);
      }
      jj_consume_token(RPAREN);
      jj_consume_token(SCOLON);
      break;
      }
    case PUT:{
      jj_consume_token(PUT);
      jj_consume_token(LPAREN);
      expression(fst);
sf.EvaluatePut(fst);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COLON:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_7;
        }
        jj_consume_token(COLON);
        expression(fst);
sf.EvaluatePut(fst);
      }
      jj_consume_token(RPAREN);
      jj_consume_token(SCOLON);
      break;
      }
    case PUTLINE:{
      jj_consume_token(PUTLINE);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAREN:
      case INTVAL:
      case CHARVAL:
      case BOOLVAL:
      case STRING:
      case ADD:
      case SUB:
      case NOT:
      case CHAR2INT:
      case INT2CHAR:
      case ID:{
        expression(fst);
sf.EvaluatePutline(fst);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COLON:{
            ;
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            break label_8;
          }
          jj_consume_token(COLON);
          expression(fst);
sf.EvaluatePutline(fst);
        }
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(SCOLON);
      break;
      }
    case SKIPLINE:{
      jj_consume_token(SKIPLINE);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
      jj_consume_token(SCOLON);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_2(2)) {
        t = jj_consume_token(ID);
snd.method = true;
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LPAREN:
        case INTVAL:
        case CHARVAL:
        case BOOLVAL:
        case STRING:
        case ADD:
        case SUB:
        case NOT:
        case CHAR2INT:
        case INT2CHAR:
        case ID:{
          expression(snd);
fst.given.add(snd);
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COLON:{
              ;
              break;
              }
            default:
              jj_la1[15] = jj_gen;
              break label_9;
            }
            jj_consume_token(COLON);
snd = new Attributes(true);
            expression(snd);
fst.given.add(snd);
          }
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        jj_consume_token(RPAREN);
        jj_consume_token(SCOLON);
sf.EvaluateProcedure(fst, t);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          assignable(fst);
          jj_consume_token(ASS);
          expression(snd);
sf.EvaluateAssignation(fst, snd);
          jj_consume_token(SCOLON);
          break;
          }
        case WHILE:{
          jj_consume_token(WHILE);
          expression(fst);
sf.EvaluateCondition(fst);
          jj_consume_token(DO);
          instructions_list(at);
          jj_consume_token(END);
          break;
          }
        case IF:{
          jj_consume_token(IF);
          expression(fst);
sf.EvaluateCondition(fst);
          jj_consume_token(THEN);
          instructions_list(at);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ELSE:{
            jj_consume_token(ELSE);
            instructions_list(at);
            break;
            }
          default:
            jj_la1[17] = jj_gen;
            ;
          }
          jj_consume_token(END);
          break;
          }
        case RETURN:{
          t = jj_consume_token(RETURN);
          expression(fst);
sf.EvaluateReturn(at, fst, t);
          jj_consume_token(SCOLON);
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

//-----------------------------------------------------------------------------
// Elementos asignables.
  static final public void assignable(Attributes at) throws ParseException {Attributes aux = new Attributes();
        Token t;
    if (jj_2_3(2)) {
      t = jj_consume_token(ID);
      jj_consume_token(LBRACK);
      expression(aux);
      jj_consume_token(RBRACK);
sf.EvaluateArray(at, aux, t);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        t = jj_consume_token(ID);
sf.EvaluateVar(at, t);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}
